Cnft1 1588 1584 1585 1593 patient design UI fixes (#669)
* show pagination start and end

* remove extra padding

* updated label as expected

* hide sort when no results are found

* Removed dummy unit test case

---------

--- a/apps/modernization-ui/src/pages/advancedSearch/AdvancedSearch.scss
+++ b/apps/modernization-ui/src/pages/advancedSearch/AdvancedSearch.scss
@@ -9,6 +9,9 @@ button {
 }
 .search-page-height {
     position: relative;
+    .accordian-item {
+        padding-top: 0;
+    }
 }
 
 .bg-light {
